pfc-triage-cockpit/kjdev-build/objects/PFC_Settings__mdt/PFC_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the PFC Triage Cockpit automation suite (routing SLA sweep thresholds, alert targets, kill switches). One record: Default.</description>
    <label>PFC Setting</label>
    <pluralLabel>PFC Settings</pluralLabel>
</CustomObject>