pfc-triage-cockpit/kjdev-build/objects/PFC_Settings__mdt/fields/Alert_Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>Alert_Chatter_Group__c</fullName>
    <description>Name of the Chatter group that receives the routing-SLA breach digest. If blank or the group does not exist, the sweep still flags records but posts nothing (fail-open).</description>
    <label>Alert Chatter Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>