pfc-triage-cockpit/kjdev-build/objects/PFC_Settings__mdt/fields/Route_Preferred_Roles__c.field-meta.xml
<CustomField>
    <fullName>Route_Preferred_Roles__c</fullName>
    <description>Comma-separated Account Team roles, in priority order, that "Route to Account Team" prefers when picking the recipient on the firm's account team (e.g. "LexPro BDM,Customer Success Manager"). Earlier in the list wins. Blank = first team member.</description>
    <label>Route Preferred Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>