pfc-triage-cockpit/kjdev-build/objects/PFC_Settings__mdt/fields/Routing_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Routing_SLA_Hours__c</fullName>
    <description>Working hours (per the org default Business Hours) a PFC may sit queue-owned before the SLA sweep flags it Routing Overdue.</description>
    <label>Routing SLA Hours</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>