pfc-triage-cockpit/kjdev-build/objects/PFC_Settings__mdt/fields/Sweep_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Sweep_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kill switch: when checked, the PFC Routing SLA sweep exits without flagging or posting.</description>
    <label>Sweep Disabled</label>
    <type>Checkbox</type>
</CustomField>